Abbiamo sistemato:il problema delle foto in editproductpage, il problema dell'ordine con lo stesso utente, aggiunto iva a orderdetails. è stato implementato lo svuota carrello come operazione utente. Il carrello si svuota anche quando l'ordine viene completato. Inoltre, se cancello un prodotto dal catalogo, gli ordini non vengono modificati. Aggiunto la pagina del catalogo per categoria.

--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -5,9 +5,19 @@
 }
 
 .box-discounts {
-    height: 300px;  /* Imposta l'altezza del box a 300px */
+    height: 400px;  /* Imposta l'altezza del box a 300px */
     margin-left: 20px; /* Aggiunge uno spazio di 20 pixel a sinistra dell'elemento */
-    margin-right: 10px; /* Aggiunge uno spazio di 10 pixel a destra dell'elemento */
+    margin-right: 20px; /* Aggiunge uno spazio di 20 pixel a destra dell'elemento */
+    position: relative; /* Necessario per posizionare il video al suo interno */
+}
+
+.box-discounts video {
+    width: 100%; /* Imposta la larghezza del video al 100% del box */
+    height: 100%; /* Imposta l'altezza del video al 100% del box */
+    object-fit: cover; /* Adatta il video all'interno del box, ritagliando se necessario */
+    position: absolute; /* Posiziona il video assolutamente rispetto al box */
+    top: 0;
+    left: 0;
 }
 
 .box-container {
