Ho sistemato il problema dell'inserimento di un prodotto, in quanto il problema riguardava i metodi in PhotoModel.java. Ho tolto le chiamate alle pagine di errore, in quanto, dovrebbero essere chiamate automaticamente se necessario. Ora sto sistemando il carrello e in particolare Carrello.java, CartModel.java e carrello.jsp in quanto ci sono dei problemi con i metodi che vanno a calcolare i prezzi

--- a/src/main/webapp/css/Cart.css
+++ b/src/main/webapp/css/Cart.css
@@ -67,6 +67,11 @@ body {
     font-weight: bold;
 }
 
+.product-price .total-price-without-discount {
+    font-size: 0.9em;
+    color: #666; /* Colore per il prezzo senza sconto */
+}
+
 form {
     margin-top: 10px;
 }
