--- a/src/main/webapp/css/ProductView.css
+++ b/src/main/webapp/css/ProductView.css
@@ -1,54 +1,39 @@
-/* Contenitore dei pulsanti in alto */
-.top-buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+body {
+    /* Imposta il colore di sfondo a nero */
     background-color: #ffffff;
-    border-bottom: 1px solid #ccc;
+    /* Imposta il colore del testo a bianco per garantire la leggibilità sullo sfondo nero */
+    color: #000;
 }
 
-.top-buttons .left-buttons {
+#product-view {
+    /* Centra il contenuto orizzontalmente */
     display: flex;
+    flex-direction: column;
     align-items: center;
+    /* Imposta lo stile per l'elemento con ID 'product-view' */
+    width: 10%;
+    padding: 20px;
+    background-color: #f8f8f8;
 }
 
-.top-buttons .right-buttons {
-    display: flex;
-    align-items: center;
+.product-details {
+    /* Imposta lo stile per gli elementi con la classe 'product-details' all'interno dell'elemento con ID 'product-view' */
+    font-size: 16px;
+    color: #333;
 }
 
-.top-buttons a,
-.top-buttons form {
-    margin-right: 15px;
+.product-image {
+    /* Imposta lo stile per gli elementi con la classe 'product-image' all'interno dell'elemento con ID 'product-view' */
+    width: 100%;
+    max-width: 100px;
+    max-height: 200px; /* Aggiunto per limitare l'altezza massima dell'immagine a 300px */
 }
 
-.top-buttons a {
-    text-decoration: none;
-    color: #007bff;
-    background-color: #ffffff;
-    border: 1px solid #007bff;
-    border-radius: 5px;
-    padding: 5px 10px;
-    transition: background-color 0.3s, color 0.3s;
+.product-table {
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.top-buttons a:hover {
-    background-color: #007bff;
-    color: #ffffff;
-}
-
-.top-buttons input[type="submit"] {
-    background-color: #007bff;
-    color: #ffffff;
-    border: 1px solid #007bff;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.top-buttons input[type="submit"]:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+.centered-links {
+    text-align: center;
 }
