--- a/src/main/webapp/css/Header.css
+++ b/src/main/webapp/css/Header.css
@@ -1,6 +1,3 @@
-/* Importa il font Roboto */
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
-
 body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -15,6 +12,8 @@ body {
       background: white;
       padding: 0 20px;
       border-bottom: 1px solid #ccc;
+      position: relative;
+      z-index: 2; /* Assicurarsi che l'header sia sopra la barra di navigazione */
 }
 
 /* Contenitore del logo */
@@ -36,6 +35,7 @@ body {
       justify-content: center;
       align-items: center;
       flex-grow: 1;
+      margin-bottom: 10px; /* Aggiungi margine inferiore */
 }
 
 /* Form di ricerca */
@@ -44,7 +44,8 @@ body {
       justify-content: center;
       align-items: center;
       width: 100%;
-      max-width: 300px; /* Ridotta la larghezza massima a 300px */
+      max-width: 300px;
+      margin: 0 auto; /* Centrato all'interno del genitore */
 }
 
 .search-container input[type="search"] {
@@ -119,16 +120,74 @@ body {
       background: #4b6cb7;
       padding: 0 20px;
       border-bottom: 1px solid #365492;
+      margin-top: -1px; /* Assicura che non ci sia spazio tra gli header */
       margin-bottom: 15px;
+      position: relative;
+      z-index: 1;
+}
+
+.sub-header-container .nav-bar {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      max-width: 1000px;
 }
 
 .sub-header-container a {
       color: white;
       text-decoration: none;
-      margin-right: 90px;
+      margin-right: 30px;
 }
 
 .sub-header-container a:hover {
       text-decoration: underline;
 }
 
+/* Responsive Design */
+@media (max-width: 768px) {
+      .header-container, .sub-header-container {
+            flex-direction: column;
+            height: auto;
+      }
+
+      .search-container {
+            order: 2;
+            margin: 10px 0; /* Aggiungi margine superiore e inferiore per separazione */
+      }
+
+      .button-container {
+            order: 3;
+            margin: 10px 0;
+      }
+
+      .nav-bar {
+            order: 4;
+            flex-direction: column;
+            align-items: center;
+      }
+
+      .nav-bar a {
+            margin-right: 0;
+            margin-bottom: 10px;
+      }
+}
+
+@media (max-width: 480px) {
+      .search-container form {
+            max-width: 90%; /* Riduce la larghezza massima */
+      }
+
+      .search-container input[type="search"] {
+            font-size: 14px;
+      }
+
+      .search-container button {
+            width: 30px;
+            height: 35px;
+      }
+
+      .footer-button, .cart-button, .login-button {
+            width: 25px;
+            height: 25px;
+      }
+}
