--- a/src/main/webapp/css/SignIn.css
+++ b/src/main/webapp/css/SignIn.css
@@ -30,6 +30,15 @@ h2{
     margin: 20px auto;
 }
 
+/* Stilizzazione dei messaggi di errore */
+.error {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    color: red;
+    font-size: 14px;
+}
+
 /* Stilizzazione dei campi di input */
 input[type="text"],
 input[type="password"],
@@ -77,7 +86,7 @@ input[type="submit"]:hover {
     input[type="email"],
     input[type="tel"] {
         padding: 12px;
-        margin-bottom: 24px;
+        margin-bottom: 5px;
     }
 
     input[type="submit"] {
