ho aggiunto l'ombra ad un prodotto quando passi il mouse sull'immagine di un prodotto nella pagina Categories.jsp. Ora sto modificando la ridistribuzione dei prodotti nella pagina.

--- a/src/main/webapp/css/Categories.css
+++ b/src/main/webapp/css/Categories.css
@@ -23,28 +23,52 @@ h1 {
 
 /* Product Container */
 .products-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50vh 50vh 50vh;
     flex-wrap: wrap;
-    justify-content: flex-start; /* Centra i prodotti nel contenitore */
+    column-count: 3;
+    justify-content: center; /* Centra i prodotti nel contenitore */
+    row-gap: 10vh; /*Spazio tra le righe*/
+    column-gap: 20px; /*Spazio tra le colonne*/
 }
 
 .product {
+    align-items: center;
+    align-content: center;
+    margin: auto;
+    place-items: center;
+    width: 300px;
+    height: fit-content;
     border: 1px solid #ddd;
     border-radius: 5px;
     overflow: hidden;
     flex: 0 1 calc(33.333% - 20px); /* Imposta la larghezza per 3 prodotti per riga, considerando 20px di margine */
     background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    margin: 10px; /* Usa margini simmetrici */
 }
 
 .product img {
-    max-width: 90%; /* Mantiene la larghezza massima dell'immagine */
+    /* Mantiene la larghezza massima dell'immagine */
+    height: 45vh;
+    width: auto;
     display: block;
     margin: auto; /* Centra l'immagine all'interno del contenitore */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Aggiungi l'ombra nera alle immagini */
+    transition: box-shadow 0.3s ease;
+}
+
+.product a:hover img {
+    box-shadow: 0 4px 8px rgb(158, 158, 158); /* Applica l'ombra solo all'immagine all'interno dell'ancora */
+}
+
+
+.price-p {
+    padding: 10px;
 }
 
 .product h2 {
+    align-content: center;
+    align-items: center;
+    height: 100px;
     margin: 0;
     padding: 15px;
     background-color: #f7f7f7;
@@ -60,6 +84,7 @@ h1 {
 .product p:last-child {
     color: #28a745;
     font-weight: bold;
+    padding: 0 15px 0; /* Imposta il padding solo per i lati sinistro e destro */
 }
 
 /* Responsive Design */
