--- a/src/main/webapp/css/Profile.css
+++ b/src/main/webapp/css/Profile.css
@@ -56,30 +56,29 @@ h1 {
     margin: 0;
 }
 
-/* Input del profilo */
-.profile-input {
+/* Stilizzo i pulsanti */
+
+button {
+    display: block;
     width: 100%;
+    text-align: center;
+    text-decoration: none;
+    background-color: #007bff;
+    color: white;
     padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
+    margin-top: 10px;
+    border: none;
+    cursor: pointer;
     border-radius: 5px;
-    background-color: #f5f5f5;
-    font-size: 16px;
-    color: #333;
-    transition: border-color 0.3s ease;
 }
-
-.profile-input:focus {
-    border-color: #007bff;
-    outline: none;
-}
-
-/*Stilizzo i pulsanti*/
 
 .click-container {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 15px;
+}
 
+button:hover {
+    background-color: #0056b3;
 }
