--- a/src/main/webapp/css/ProfileOverview.css
+++ b/src/main/webapp/css/ProfileOverview.css
@@ -31,19 +31,25 @@ body {
     position: relative;
     align-items: center;
     align-content: center;
-    margin-right: 20px;
-    margin-left: 20px;
     padding: 30px;
     width: 400px;
     height: 200px;
     border: 1px solid #b5b2b2;
     border-radius: 5px;
-    background-color: #fff;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Aggiungi l'ombra nera alle immagini */
     transition: box-shadow 0.5s ease; /* Aggiungi transizione all'ombra */
     overflow: hidden;
     flex: 1; /* Aggiungi questa linea */
 }
+
+/*
+#90B84B
+#B85E4B
+#495163
+#363832
+#383332
+*/
+
 
 .box-text {
     text-align: center;
@@ -67,7 +73,7 @@ a{
 }
 
 .myGif {
-    padding: 7px;
+    padding: 2px;
     height: 70px;
     width: 70px;
     margin-left: 0;
