Ho modificato jsp e css di CarteUtente.jsp, CheckoutCard.jsp, CheckoutShipping.jsp, DetailProductPage.jsp, IndirizziUtente.jsp, OrderHistory.jsp, ProfileOverview.jsp, Profilo.jsp, RiepilogoOrdine.jsp. Ho modificato anche AddToCartServlet.java, GeneralUtils.java e DetailSelection.js

--- a/src/main/webapp/css/Header.css
+++ b/src/main/webapp/css/Header.css
@@ -151,6 +151,9 @@
 
 .sub-header-container .nav-bar {
       display: flex;
+      /*modifiche di biagio*/
+      flex-direction: row-reverse;
+      /**/
       justify-content: space-around;
       width: 100%;
       max-width: 1000px;
