--- a/src/main/webapp/css/Header.css
+++ b/src/main/webapp/css/Header.css
@@ -1,4 +1,12 @@
-
+/* Global Styles */
+body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+}
 
 /* Contenitore dell'header principale */
 .header-container {
